# emp-agmpc

./: .gitignore  README.md  config.yml  go.mod  install_manifest.txt  run2  run2Inputs  server.go  swig_wrap.sh
circuits/: adder64_custom_safe.txt  adder64_tlsnotary.txt  adder_64_custom.txt  compare-lt-32-bit-unsigned-old.txt  tlsnotary_c4.txt  tlsnotary_c6.txt  tlsnotary_c7.txt  tlsnotary_combine_pms_shares.txt  tlsnotary_getP256prime.txt  tlsnotary_getP256primeOnesComplement.txt  tlsnotary_mult256by1.txt  tlsnotary_safe_combine_pms_shares.txt
emp-agmpc/: mpc.h
scripts/: hkdf-256.sh  sha_test_vectors.py
swigmpc/: mpc_wrapper.cpp  mpc_wrapper.h  swig_mpc.i
test/: CMakeLists.txt  adder_plain.cpp  aes.cpp  generate_handshake_circuits.cpp  sha256.cpp  sha256_plain.cpp  test.h  test_in_out.cpp  test_in_out_adder.cpp  test_in_out_sha256.cpp  test_in_out_tls.cpp  test_in_out_tls_n_for_1.cpp  tls_c1.cpp  tls_plain.cpp
test/inputs/: tls_c1_1.txt  tls_c1_2.txt
