#Testing macro
macro (add_test_executable_with_lib _name libs)
	add_executable(test_${_name} "${_name}.cpp")
	target_link_libraries(test_${_name} ${EMP-OT_LIBRARIES})
endmacro()

macro (add_test_case _name)
	add_test_executable_with_lib(${_name} "")
  	add_test(NAME ${_name} COMMAND "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test_${_name}" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/")
endmacro()

macro (add_test_case_with_run _name)
	add_test_executable_with_lib(${_name} "")
	add_test(NAME ${_name} COMMAND "./run" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test_${_name}" WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/")

endmacro()

# Test cases
add_test_case_with_run(test_mpc)
add_test_case_with_run(test_mpc_individual)
add_test_case_with_run(aes)
add_test_case_with_run(sha1)
add_test_case_with_run(sha256)
add_test_case_with_run(sha256_plain)
add_test_case_with_run(triple)
add_test_case_with_run(pr10_test)
add_test_case_with_run(test_in_out)
add_test_case_with_run(test_in_out_sha256)
add_test_case_with_run(test_in_out_tls)
add_test_case_with_run(test_in_out_tls_n_for_1)
add_test_case_with_run(test_in_out_adder)
add_test_case_with_run(adder_plain)
add_test_case_with_run(tls_c1)
add_test_case_with_run(tls_plain)
add_test_case_with_run(generate_handshake_circuits)
